// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MiniBar > clamps the fill width to 100% when pct exceeds 1 1`] = `
<div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 2px;"
    >
      <span
        style="font-size: 10px; color: var(--text-secondary);"
      >
        x
      </span>
      <span
        style="font-size: 11px; font-weight: 500; color: var(--text-primary);"
      >
        y
      </span>
    </div>
    <div
      style="display: flex; justify-content: space-between; margin-bottom: 3px;"
    >
      <span
        style="font-size: 9px; color: var(--text-muted);"
      >
        g
      </span>
      <span
        style="font-size: 9px; color: rgb(74, 222, 128);"
      >
        140
        %
      </span>
    </div>
    <div
      style="height: 4px; background: var(--bg-input); border-radius: 2px; overflow: hidden;"
    >
      <div
        style="height: 100%; width: 100%; background: rgb(74, 222, 128); border-radius: 2px; transition: width 0.6s ease;"
      />
    </div>
  </div>
</div>
`;

exports[`MiniBar > renders label, value and the rounded pct 1`] = `
<div>
  <div
    style="margin-bottom: 8px;"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: baseline; margin-bottom: 2px;"
    >
      <span
        style="font-size: 10px; color: var(--text-secondary);"
      >
        Weekly miles
      </span>
      <span
        style="font-size: 11px; font-weight: 500; color: var(--text-primary);"
      >
        34.2 / 40 mi
      </span>
    </div>
    <div
      style="display: flex; justify-content: space-between; margin-bottom: 3px;"
    >
      <span
        style="font-size: 9px; color: var(--text-muted);"
      >
        Goal: 40 mi/week
      </span>
      <span
        style="font-size: 9px; color: rgb(251, 191, 36);"
      >
        86
        %
      </span>
    </div>
    <div
      style="height: 4px; background: var(--bg-input); border-radius: 2px; overflow: hidden;"
    >
      <div
        style="height: 100%; width: 85.5%; background: rgb(251, 191, 36); border-radius: 2px; transition: width 0.6s ease;"
      />
    </div>
  </div>
</div>
`;
